# idf_component_register(SRCS "hdlc_test_read.c" PRIV_REQUIRES spi_flash INCLUDE_DIRS "")                   
# idf_component_register(SRCS "hdlc_test_write.c" PRIV_REQUIRES spi_flash INCLUDE_DIRS "")                   
idf_component_register(SRCS "hdlc_test_read.c" PRIV_REQUIRES spi_flash INCLUDE_DIRS "")                   
